# CKRenderEngine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CKRenderEngineConfig.cmake.in
examples/: CMakeLists.txt
examples/bgfx_cubes/: CMakeLists.txt  main.cpp
include/: CKDebugLogger.h  CKRasterizer.h  CKRasterizerEnums.h  CKRasterizerTypes.h  CKRenderEngineEnums.h  CKRenderEngineTypes.h  CKRenderSettings.h  CKRenderedScene.h  CKSceneGraph.h  MeshAdjacency.h  MeshStriper.h  NearestPointGrid.h  NvStripifier.h  RCK2dEntity.h  RCK3dEntity.h  RCK3dObject.h  RCKAnimation.h  RCKBodyPart.h  RCKCamera.h  RCKCharacter.h  RCKCurve.h  RCKCurvePoint.h  RCKGrid.h  RCKKeyedAnimation.h  RCKKeyframeData.h  RCKKinematicChain.h  RCKLayer.h  RCKLight.h  RCKMaterial.h  RCKMesh.h  RCKObjectAnimation.h  RCKPatchMesh.h  RCKPlace.h  RCKRasterizerContext.h  RCKRenderContext.h  RCKRenderManager.h  RCKRenderObject.h  RCKSkin.h  RCKSprite.h  RCKSprite3D.h  (+9 more)
src/: CK2_3D.cpp  CK2_3D.ini  CK2_3D.rc  CK2dEntity.cpp  CK3dEntity.cpp  CK3dObject.cpp  CKAnimation.cpp  CKBodyPart.cpp  CKCallbacksContainer.cpp  CKCamera.cpp  CKCharacter.cpp  CKCurve.cpp  CKCurvePoint.cpp  CKDebugLogger.cpp  CKDebugLogger.h  CKDrawStateCache.cpp  CKDrawStateCache.h  CKException.cpp  CKException.h  CKFFConstants.h  CKFFDebug.cpp  CKFFDebug.h  CKFFShaderCache.cpp  CKFFShaderCache.h  CKFFShaderKey.cpp  CKFFShaderKey.h  CKFFSpecializationInfo.cpp  CKFFSpecializationInfo.h  CKFFSpecializedModuleTable.cpp  CKFFSpecializedModuleTable.h  CKFFStageState.cpp  CKFFStageState.h  CKFFStateDesc.h  CKFFUniformState.cpp  CKFFUniformState.h  CKFixedFunctionPipeline.cpp  CKFixedFunctionPipeline.h  CKFrustumCuller.cpp  CKFrustumCuller.h  CKGrid.cpp  (+55 more)
src/CKRasterizer/: CKBgfxConfig.h  CKBgfxRasterizer.h  CKBgfxRasterizerContext.cpp  CKNULLRasterizer.cpp  CMakeLists.txt
src/CKRasterizer/CKBgfxRasterizer/: CKBgfxCallback.cpp  CKBgfxConfig.cpp  CKBgfxConfig.h  CKBgfxInternal.cpp  CKBgfxInternal.h  CKBgfxRasterizer.cpp  CKBgfxRasterizer.h  CKBgfxRasterizer.ini  CKBgfxRasterizerContext.cpp  CKBgfxRasterizerDriver.cpp  CMakeLists.txt
src/CKRasterizer/CKBgfxRasterizer/tests/: test_bgfx_rasterizer.cpp
src/CKRasterizer/CKDX9Rasterizer/: CKDX9Rasterizer.cpp  CKDX9Rasterizer.h  CKDX9RasterizerContext.cpp  CKDX9RasterizerDriver.cpp  CMakeLists.txt
src/CKRasterizer/CKRasterizerLib/: CKNULLRasterizer.cpp  CKRasterizer.cpp  CKRasterizerContext.cpp  CKRasterizerDriver.cpp  CMakeLists.txt
src/CKRasterizer/tests/: test_bgfx_rasterizer.cpp  test_null_rasterizer.cpp
src/shaders/: compile_shaders.py  ff_fog_common.sc  ffp_specialized_variants.json  fs_ff_common.sc  fs_ff_lit.hlsl  fs_ff_stage.hlsl  fs_ff_stage.sc  fs_ff_unlit.hlsl  varying.def.sc  vs_ck_lit.asm  vs_ff_3d.hlsl  vs_ff_3d.sc  vs_ff_lit.asm  vs_ff_lit.hlsl  vs_ff_positiont.hlsl  vs_ff_positiont.sc  vs_ff_unlit.hlsl
tests/: CMakeLists.txt  FFPDiagnosticHarness.h  TestTriangleMultiset.h  simple_mesh_test.cpp  test_ckdx9_rasterizer_helpers.cpp  test_ckmesh.cpp  test_draw_state_cache.cpp  test_ff_uniform_state.cpp  test_ffp_contract.cpp  test_ffp_stencil_submit.cpp  test_geometry_regressions.cpp  test_material.cpp  test_meshstriper.cpp  test_nvstripifier.cpp  test_render_settings.cpp  test_scene_graph.cpp
